--- a/tox.ini
+++ b/tox.ini
@@ -26,4 +26,4 @@ src_paths = src
 basepython = python3
 deps = -rdocs/requirements.txt
 changedir = docs
-commands = sphinx-build -E -W -b html . _build/html
+commands = sphinx-build -E -n -b html . _build/html
